[gd_scene load_steps=3 format=3 uid="uid://boti3t5ybakx8"]

[ext_resource type="Script" uid="uid://cqlehtuhl68v3" path="res://Scripts/main.gd" id="1_de0k3"]
[ext_resource type="Texture2D" uid="uid://bmokp5jralhr8" path="res://Assets/Generated_Image_December_09__2025_-_12_27AM-removebg-preview.png" id="2_edihu"]

[node name="Main" type="Node2D"]
position = Vector2(419, 148)
scale = Vector2(0.42, 0.42)
script = ExtResource("1_de0k3")

[node name="CookieButton" type="TextureButton" parent="."]
offset_left = -133.33333
offset_top = 97.619064
offset_right = 366.6667
offset_bottom = 597.6191
texture_normal = ExtResource("2_edihu")
metadata/_edit_use_anchors_ = true

[node name="CookieLabel" type="Label" parent="."]
offset_left = 230.95236
offset_top = -109.52382
offset_right = 491.95236
offset_bottom = -24.523819
theme_override_font_sizes/font_size = 38
text = "COOKIE : 0"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="ShopContainer" type="VBoxContainer" parent="."]
offset_left = 886.0
offset_top = 48.0
offset_right = 1456.0118
offset_bottom = 552.70593
scale = Vector2(0.85, 0.85)
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 11.6
theme_override_constants/separation = 11
alignment = 1

[node name="CursorButton" type="Button" parent="ShopContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38

[node name="GrandmaButton" type="Button" parent="ShopContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38

[node name="FarmButton" type="Button" parent="ShopContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38

[node name="ClickUpgradeButton" type="Button" parent="."]
offset_left = 204.76192
offset_top = 964.28577
offset_right = 542.76196
offset_bottom = 1060.2858
theme_override_font_sizes/font_size = 38
text = "Upgrade Click (50)"
metadata/_edit_use_anchors_ = true

[node name="AutoTimer" type="Timer" parent="."]
autostart = true
